prevent notification bar from overflowing viewport

--- a/app/component/front-page.scss
+++ b/app/component/front-page.scss
@@ -365,6 +365,7 @@ div.route-tabs .tabs-navigation.bp-large {
 
 .flex-grow {
   flex-grow: 1;
+  flex-basis: 0;
 }
 
 .flex-vertical {
